# Gtool

./: .gitignore  Godot-Rust Template Project.apk.idsig  README.md  export_presets.cfg  project.godot
.github/workflows/: build.yml
example_godot/: exit.tscn  maintestv.tscn  menutest.gd  peerinfo.gd
example_godot/cuckoo/: cukoo.tscn  test_cuckoo.gd
example_godot/examples-pkarr/: key.tscn  main.gd  main.tscn
example_godot/nostringer/: nostringer.tscn  respaldonsnsns.gd  signature_txt.tscn  test_binario.gd  test_nostringer.gd  test_nostringer_group.gd  testvotel.gd  testvotel.tscn
example_godot/notrngd/: menu_test.tscn  mostro_observer.gd  nostr_demo1.gd  nostr_demo2.gd  nostrn_gif.tscn  nostrn_prueba_observador.tscn
example_godot/shamir/: sashir.tscn  test_shamir.gd
rust/rust/: Cargo.toml
rust/rust/src/: cuckoo_godot.rs  lib.rs  nostr_godot.rs  nostringer_godot.rs  nostrpeer.rs  shamir_godot.rs
rust/rust/src/nostrn/: client.rs
